# jadegate

./: .gitignore  CATALOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  SKILL.md  UPGRADE_PLAN_V2.md  jade_keygen.py  jade_keygen_ci.py  jade_sign_all.py  jadegate.pub.json  llms.txt  pyproject.toml  scan_report_finance.json  setup.py  test_external_skills.py
.claude-plugin/: marketplace.json
.well-known/: agents.json
assets/: gen_compare_en_v2.js  gen_compare_v2.js  gen_compare_v3.js  gen_compare_zh.js  gen_compare_zh_v2.js  generate_diagrams.js  svg2png.js
converted_skills/: base64_file_encode.json  csv_data_analysis.json  csv_data_analysis.sig.json  discord_webhook_send.sig.json  dns_lookup.json  docker_container_list.json  docker_container_list.sig.json  exa_semantic_search.json  git_clone_repo.json  git_clone_repo.sig.json  git_diff_summary.json  git_diff_summary.sig.json  github_create_issue.json  github_create_issue.sig.json  hash_file_verify.json  http_health_check.json  image_resize_convert.json  image_resize_convert.sig.json  ip_geolocation.json  json_data_transform.json  json_data_transform.sig.json  log_error_analyzer.json  log_error_analyzer.sig.json  notion_page_read.json  qr_code_generate.json  qr_code_generate.sig.json  rss_feed_reader.json  slack_send_message.json  slack_send_message.sig.json  sqlite_db_query.json  ssl_cert_check.json  telegram_send_msg.json  text_sentiment.json  text_translation.json  timezone_query.json  timezone_query.sig.json  web_search_query.sig.json  webpage_content_extract.json  webpage_content_extract.sig.json  (+3 more)
jade_rust/: Cargo.toml
jade_rust/src/: crypto.rs  dag.rs  executor.rs  lib.rs  main.rs  schema.rs  security.rs  validator.rs
(+966 files in other folders)
