[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jadegate"
version = "1.0.0"
description = "Deterministic Security for AI Agent Skills"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [{name = "JadeGate"}]
keywords = ["ai", "agent", "security", "mcp", "skills", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/JadeGate/jade-core"
Repository = "https://github.com/JadeGate/jade-core"

[project.scripts]
jade = "jade_cli:main"

[tool.setuptools]
py-modules = ["jade_cli"]
packages = ["jade_core"]

[tool.setuptools.package-data]
"*" = ["jade_schema/*.json", "jade_skills/**/*.json"]
