[package]
name = "jadegate"
version = "1.0.0"
edition = "2021"
description = "💠 JadeGate — Deterministic Security for AI Agent Skills"
license = "Apache-2.0"
repository = "https://github.com/JadeGate/jade-core"
keywords = ["ai", "agent", "security", "mcp", "verification"]
categories = ["cryptography", "parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
thiserror = "2"

[lib]
name = "jadegate"
path = "src/lib.rs"

[[bin]]
name = "jade"
path = "src/main.rs"
